--- a/package.json
+++ b/package.json
@@ -6,5 +6,15 @@
   "author": "",
   "type": "module",
   "main": "src/index.ts",
-  "scripts": {}
+  "scripts": {
+    "dev": "npx tsx src/index.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.1",
+    "openapi-typescript": "^7.9.1",
+    "tsx": "^4.20.5"
+  },
+  "dependencies": {
+    "openapi-fetch": "^0.14.0"
+  }
 }
