--- a/package.json
+++ b/package.json
@@ -7,16 +7,33 @@
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "npx tsx src/index.ts"
+    "dev": "npx tsx src/index.ts",
+    "web": "vite --port 3000"
   },
   "devDependencies": {
     "@types/luxon": "^3.7.1",
     "@types/node": "^24.3.1",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "jsdom": "^26.0.0",
     "openapi-typescript": "^7.9.1",
-    "tsx": "^4.20.5"
+    "tsx": "^4.20.5",
+    "typescript": "^5.7.2",
+    "vite": "^6.3.5",
+    "web-vitals": "^4.2.4"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-devtools": "^0.2.2",
+    "@tanstack/react-query": "^5.66.5",
+    "@tanstack/react-query-devtools": "^5.84.2",
+    "@tanstack/react-router": "^1.130.2",
+    "@tanstack/react-router-devtools": "^1.131.5",
     "luxon": "^3.7.2",
-    "openapi-fetch": "^0.14.0"
+    "openapi-fetch": "^0.14.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.13"
   }
 }
